--- a/movies-explorer/src/components/MoviesCard/MoviesCard.css
+++ b/movies-explorer/src/components/MoviesCard/MoviesCard.css
@@ -5,8 +5,9 @@
   background-color: #fff;
   border-radius: 10px;
   overflow: hidden;
-  width: 100%;
-  height: 100%;
+  width: 270px;
+  height: 218px;
+
   background: #222222;
   color: #fff;
   box-shadow: 0px 16px 24px 0px #0000000D;
@@ -14,7 +15,7 @@
 }
 
 .moviescard__pic {
-  height: 151px;
+  max-height: 151px;
   object-fit: cover;
   object-position: center;
   width: 100%;
@@ -57,9 +58,22 @@
   margin: 0 0 14px 12px;
 }
 
+.moviescard__button {
+  display: flex;
+  align-items: center;
+  background: #ffffff00;
+  border: none;
+  padding: 0;
+}
+
+
 @media screen and (max-width: 850px) {
+  .moviescard {
+    width: 100%;
+    height: 100%;
+  }
   .moviescard__pic {
-    height: 190px;
+    max-height: 190px;
   }
 }
 
