--- a/movies-explorer/src/components/MoviesCardList/MoviesCardList.css
+++ b/movies-explorer/src/components/MoviesCardList/MoviesCardList.css
@@ -1,10 +1,11 @@
-.moviescardlist {
+.moviescardlist__container {
   display: grid;
   max-width: 1140px;
-  grid-template-columns: repeat(4, 1fr);
+  grid-template-columns: repeat(auto-fit, minmax(270px, 1fr));
   gap: 17px;
   margin: 0 auto;
   padding: 70px 70px 30px;
+  justify-items: center;
 }
 
 .moviescardlist__button {
@@ -24,8 +25,9 @@
   margin: 50px auto 80px;
 }
 
-@media screen and (max-width: 850px) {
-  .moviescardlist {
+
+@media screen and (max-width: 1000px) {
+  .moviescardlist__container {
     grid-template-columns: repeat(2, 1fr);
     gap: 30px;
     justify-items: center;
@@ -35,7 +37,7 @@
 }
 
 @media screen and (max-width: 620px) {
-  .moviescardlist {
+  .moviescardlist__container {
     grid-template-columns: repeat(1, 1fr);
     gap: 20px;
     margin: 0 18px;
