--- a/movies-explorer/src/components/Promo/Promo.css
+++ b/movies-explorer/src/components/Promo/Promo.css
@@ -23,7 +23,7 @@
   font-weight: 400;
   line-height: 58px;
   max-width: 640px;
-  margin: 0 0 36px 0;
+  margin: 0 340px 36px 0;
 
 }
 
@@ -79,10 +79,9 @@
   }
 
   .promo__title {
-    margin-bottom: 22px;
     font-size: 40px;
     line-height: 50px;
-
+    margin: 0 0 22px 0;
   }
 }
 
@@ -91,9 +90,7 @@
     font-size: 30px;
     line-height: 38px;
     letter-spacing: -0.04em;
-    margin-bottom: 24px;
-
-
+    margin: 0 0 24px 0;
   }
 
   .promo__container {
