--- a/movies-explorer/src/components/SearchForm/SearchForm.css
+++ b/movies-explorer/src/components/SearchForm/SearchForm.css
@@ -25,7 +25,12 @@
   background-color: #202020;
 }
 
+.search-input:focus {
+  outline: none;
+}
+
 .search-button {
+  cursor: pointer;
   display: flex;
   align-items: center;
   background: #202020;
@@ -33,17 +38,21 @@
   padding: 0;
 }
 
-.thumb {
+.search-button:hover {
+  opacity: 0.8;
+}
+
+.search-form__thumb {
   vertical-align: text-top;
   margin-right: 14px;
 }
 
-.thumb__container {
+.search-form__thumb__container {
   display: flex;
 
 }
 
-.thumb-description {
+.search-form__thumb-description {
   padding: 0;
   margin: 0;
   font-family: Inter;
@@ -60,22 +69,22 @@
     padding: 90px 30px 61px;
   }
 
-  .thumb {
+  .search-form__thumb {
     order: 1;
     margin: 0;
   }
 
-  .thumb__container {
+  .search-form__thumb__container {
     justify-content: end;
   }
 
-  .thumb-description {
+  .search-form__thumb-description {
     margin: 0 14px 0 0;
   }
 }
 
 @media screen and (max-width: 620px) {
-  .thumb__container {
+  .search-form__thumb__container {
     justify-content: center;
   }
 
@@ -84,6 +93,7 @@
     line-height: 21.78px;
     letter-spacing: 0px;
   }
+
   .search-form {
     padding: 90px 18px 51px;
   }
