--- a/movies-explorer/src/components/Register/Register.css
+++ b/movies-explorer/src/components/Register/Register.css
@@ -53,7 +53,7 @@
   display: block;
   width: 100%;
   height: 46px;
-  margin: 0 0 20px 0;
+  margin: 0;
   padding: 15px;
   border: none;
   font-family: Inter;
@@ -72,11 +72,8 @@
   outline: none;
 }
 
-.register__input:last-of-type {
-  margin-bottom: 0;
-}
-
 .register__button {
+  cursor: not-allowed;
   display: block;
   width: 100%;
   height: 45px;
@@ -86,6 +83,16 @@
   border-radius: 3px;
   background-color: #4285F4;
   color: #fff;
+  opacity: 0.3;
+}
+
+.register__button_active {
+  cursor: pointer;
+  opacity: 1;
+}
+
+.register__button_active:hover {
+  opacity: 0.8;
 }
 
 .register__description {
@@ -107,6 +114,10 @@
 }
 
 .register__warning {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 5px 0 10px 0;
+  min-height: 45px;
   font-family: Inter;
   font-size: 10px;
   font-weight: 400;
@@ -114,8 +125,32 @@
   letter-spacing: 0em;
   text-align: left;
   color: #EE3465;
-  margin: 10px 0 0 0;
 }
+
+.register__server-error {
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  align-items: center;
+  margin: 10px;
+  background: #1b1b1b;
+  color: #a31313;
+  padding: 10px 20px;
+  border-radius: 7px;
+
+  visibility: hidden;
+  opacity: 0;
+  color: #EE3465;
+  text-align: center;
+  transition: visibility 0.2s, opacity 0.2s linear;
+}
+
+.register__server-error_visible {
+  visibility: visible;
+  opacity: 1;
+  transition: visibility 0.2s, opacity 0.2s linear;
+}
+
 
 @media screen and (max-width: 850px) {
   .register__top-container {
@@ -125,11 +160,10 @@
   .register__bottom-container {
     margin-bottom: 232px;
   }
+
   .register__button {
     margin-top: 50px;
   }
-
-
 }
 
 @media screen and (max-width: 620px) {
@@ -155,6 +189,7 @@
     margin-bottom: 30px;
     width: 100%;
   }
+
   .register__logo {
     align-self: center;
   }
